commitDominio